<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="312dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog">

    <TextView
        android:id="@+id/tv_dialog_basket_comment"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/dialog_basket_comment"
        android:gravity="left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_dialog_basket_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/dialog_basket_continue"
        android:textColor="@color/primary_accent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_basket_comment" />

    <TextView
        android:id="@+id/tv_dialog_basket_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/dialog_basket_check"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_dialog_basket_continue"
        app:layout_constraintEnd_toStartOf="@id/tv_dialog_basket_continue" />
</androidx.constraintlayout.widget.ConstraintLayout>