<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:background="@drawable/rounded_dialog">

        <TextView
            android:id="@+id/tv_amount_title"
            style="@style/tv_bold_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/basket_count_dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dv_amount"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            app:dividerColor="@color/greyscale_line"
            app:layout_constraintTop_toBottomOf="@id/tv_amount_title" />

        <NumberPicker
            android:id="@+id/np_amount"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dv_amount" />

        <TextView
            android:id="@+id/tv_amount"
            style="@style/tv_bold_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/basket_count_dialog_count_unit"
            app:layout_constraintBottom_toBottomOf="@id/np_amount"
            app:layout_constraintStart_toEndOf="@id/np_amount" />

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/tv_bold_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/basket_count_dialog_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_input"
            style="@style/tv_bold_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/basket_count_dialog_input"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>