<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/greyscale_surface"
    android:paddingBottom="22dp">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greyscale_line"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_order_price_description"
        style="@style/tv_normal_14.GreyDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="24dp"
        android:text="@string/order_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/tv_order_price"
        style="@style/tv_normal_14.GreyDefault"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_order_price_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_order_price_description"
        tools:text="15000원" />

    <TextView
        android:id="@+id/tv_delivery_fee_description"
        style="@style/tv_normal_14.GreyDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:text="@string/delivery_fee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_order_price_description" />

    <TextView
        android:id="@+id/tv_delivery_fee"
        style="@style/tv_normal_14.GreyDefault"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_delivery_fee_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_delivery_fee_description"
        tools:text="15000원" />

    <View
        android:id="@+id/divider_price"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/greyscale_line"
        app:layout_constraintEnd_toEndOf="@id/tv_delivery_fee"
        app:layout_constraintStart_toStartOf="@id/tv_delivery_fee_description"
        app:layout_constraintTop_toBottomOf="@id/tv_delivery_fee_description" />

    <TextView
        style="@style/tv_normal_14.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/total_price"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/divider_price"
        app:layout_constraintTop_toBottomOf="@id/divider_price" />

    <TextView
        android:id="@+id/tv_item_total"
        style="@style/tv_normal_14.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/divider_price"
        app:layout_constraintTop_toBottomOf="@id/divider_price"
        tools:text="777원" />
</androidx.constraintlayout.widget.ConstraintLayout>