<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="uiState"
            type="com.example.banchan.presentation.UiState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyscale_surface">

        <TextView
            android:id="@+id/tv_basket_recently_product"
            style="@style/tv_bold_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/basket_recently_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_basket_recently_product_page"
            style="@style/tv_normal_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/basket_recently_product_page"
            app:layout_constraintBottom_toBottomOf="@+id/tv_basket_recently_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_basket_recently_product" />

        <ImageView
            android:id="@+id/iv_none_recently_viewed"
            showOnEmpty="@{uiState}"
            android:visibility="invisible"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/none_recently_product"/>

        <TextView
            android:id="@+id/tv_none_recently_viewed"
            showOnEmpty="@{uiState}"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basket_recently_product_nothing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_none_recently_viewed"/>

        <ProgressBar
            android:id="@+id/pb_home_loading"
            style="?android:attr/progressBarStyle"
            showOnLoading="@{uiState}"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_basket_recently_list"
            android:layout_width="match_parent"
            showOnSuccess="@{uiState}"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_basket_recently_product"
            tools:layout_editor_absoluteX="16dp" />

        <include
            android:id="@+id/layout_error_recent_product"
            layout="@layout/item_home_error"
            android:visibility="invisible"
            bind:uiState="@{uiState}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>