<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="orderModel"
            type="com.example.banchan.domain.model.OrderModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyscale_surface"
        android:paddingBottom="48dp">

        <TextView
            android:id="@+id/tv_order_price_description"
            style="@style/tv_normal_14.GreyDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:layout_marginTop="24dp"
            android:text="@string/order_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_order_price"
            style="@style/tv_normal_14.GreyDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@{@string/basket_amount(orderModel.orderPrice)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_order_price_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_order_price_description"
            tools:text="15000원" />

        <TextView
            android:id="@+id/tv_delivery_fee_description"
            style="@style/tv_normal_14.GreyDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:text="@string/delivery_fee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_order_price_description" />

        <TextView
            android:id="@+id/tv_delivery_fee"
            style="@style/tv_normal_14.GreyDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@{@string/basket_amount(orderModel.deliveryFee)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_delivery_fee_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_delivery_fee_description"
            tools:text="15000원" />

        <View
            android:id="@+id/divider_price"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/greyscale_line"
            app:layout_constraintEnd_toEndOf="@id/tv_delivery_fee"
            app:layout_constraintStart_toStartOf="@id/tv_delivery_fee_description"
            app:layout_constraintTop_toBottomOf="@id/tv_delivery_fee_description" />

        <TextView
            style="@style/tv_normal_14.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total_price"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/divider_price"
            app:layout_constraintTop_toBottomOf="@id/divider_price" />

        <TextView
            android:id="@+id/tv_item_total"
            style="@style/tv_normal_14.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@{@string/basket_amount(orderModel.deliveryFee + orderModel.orderPrice)}"
            app:layout_constraintEnd_toEndOf="@id/divider_price"
            app:layout_constraintTop_toBottomOf="@id/divider_price"
            tools:text="777원" />

        <Button
            android:id="@+id/btn_basket_order"
            style="@style/common_button_style"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:alpha="@{orderModel.deliveryFee + orderModel.orderPrice &lt; orderModel.minOrderPrice ? 0.7f : 1.0f}"
            android:enabled="@{orderModel.deliveryFee + orderModel.orderPrice &lt; orderModel.minOrderPrice ? false : true}"
            android:text="@{orderModel.deliveryFee + orderModel.orderPrice &lt; orderModel.minOrderPrice ? @string/basket_check_min_order_price : @string/basket_amount_btn(orderModel.deliveryFee + orderModel.orderPrice)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_total"
            tools:text="21,140원 주문하기" />

        <TextView
            android:id="@+id/tv_free_order_guide"
            style="@style/tv_normal_14"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@{orderModel.orderPrice &lt; orderModel.freeOrderPrice ? @string/basket_guide_free_order(orderModel.freeOrderPrice - orderModel.orderPrice) : @string/basket_free_order}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_basket_order"
            tools:text="21,360원을 더 담으면 무료 배송!" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>